# python-dataviz-toolkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test-notebooks.yml
cheat-sheets/: README.md  matplotlib.ipynb  overview.ipynb  pandas.ipynb  plotly.ipynb  seaborn.ipynb
plot-recipes/: 01_line_plot_time_series.ipynb  02_bar_chart_categorical.ipynb  03_histogram_density_plot.ipynb  04_box_plot_violin_plot.ipynb  05_scatter_plot_relationship.ipynb  06_pie_donut_chart.ipynb  07_grouped_stacked_bar_chart.ipynb  08_map_visualization.ipynb  09_sankey_diagram.ipynb  10_heatmap_matrix.ipynb  11_area_chart.ipynb  12_treemap.ipynb  13_bubble_chart.ipynb  14_waterfall_chart.ipynb  15_candlestick_chart.ipynb  16_parallel_coordinates.ipynb  17_funnel_chart.ipynb  18_gauge_chart.ipynb  19_polar_plot.ipynb  20_stream_graph.ipynb  21_ridgeline_plot.ipynb  22_radar_chart.ipynb  23_pair_plot.ipynb  24_network_diagram.ipynb  README.md  plot_recipes_index.ipynb  requirements.txt
